# mpfm

./: .gitignore  Cargo.toml  LICENSE  README.md  README_zh.md  TESTING_EXPLANATION.md  build.rs  generate_icons.sh  package-lock.json  package.json  pnpm-lock.yaml  tauri.conf.json  tauri.win.conf.json
.cargo/: config.toml
.github/workflows/: README.md  ci.yml  main.yml  release-win.yml  release-win7.yml  release.yml  tests.yml
capabilities/: default.json
docs/: ADDING_FTP_PROTOCOL.md  ADDING_NEW_PROTOCOL.md  ADDING_NEW_PROTOCOL_EN.md  ADDING_NEW_PROTOCOL_ZH.md  ADD_NEW_PROTOCOL.md  DEVELOPMENT.md  QUICK_START.md  QUICK_START_EN.md
examples/: ftp_manual_test.rs
icons/: icon.icns
scripts/: cleanup_ftp_test.sh  setup_ftp_test.sh
src/: lib.rs  main.rs  main_cli.rs  tauri_commands.rs  test_ftp_debug.rs
src/cli/: app.rs  commands.rs  mod.rs
src/commands/: config.rs  connection.rs  file.rs  mod.rs  types.rs  utils.rs
src/core/: config.rs  error.rs  file.rs  mod.rs
src/protocols/: fs.rs  ftp.rs  mod.rs  s3.rs  traits.rs
src/utils/: logger.rs  mod.rs
tests/: FTP_TEST_README.md  ftp_integration_tests.rs
ui/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.tsx  index.css  types.ts
ui/src/components/: AdvancedFileManager.tsx  ConnectionManager.tsx  FileManager.tsx  FileManagerWrapper.tsx  I18nDemo.tsx  LanguageSwitcher.tsx  SettingsPage.tsx
ui/src/components/ConnectionManager/: index.tsx  types.ts  utils.tsx
ui/src/components/ConnectionManager/components/: ConnectionModal.tsx  DirectoryModal.tsx  DraggableConnection.tsx  DroppableDirectory.tsx  ProtocolFields.tsx  Sidebar.tsx
ui/src/components/ConnectionManager/hooks/: useConnectionModal.ts  useConnectionOperations.ts  useDirectories.ts  useDirectoryModal.ts  useDragAndDrop.ts
ui/src/components/FileManager/: BatchDownloadModal.tsx  BatchOperationToolbar.tsx  FileManagerModular.tsx  README.md  constants.ts  index.tsx  types.ts
ui/src/components/FileManager/components/: BreadcrumbNav.tsx  PaginationControls.tsx  TableColumns.tsx  Toolbar.tsx  index.ts
ui/src/components/FileManager/hooks/: index.ts  useBatchOperations.ts  useFileManagerState.ts  useFileOperations.ts  useFileSelection.ts  usePreviewAndBatch.ts  useSearchAndPagination.ts  useTableHeight.ts
ui/src/components/FileManager/utils/: index.ts
ui/src/components/FilePreview/: CodePreview.tsx  ExcelPreview.tsx  ImagePreview.tsx  JsonPreview.tsx  PdfPreview.tsx  TextPreview.tsx  WordPreview.tsx  index.tsx
ui/src/components/FilePreview/utils/: fileTypeDetector.ts  fileTypeI18n.ts
ui/src/components/TabbedFileManager/: README.md  TabbedFileManager.css  export.ts  index.tsx  types.ts
ui/src/components/TabbedFileManager/components/: FileManagerTab.tsx  TabBar.tsx
ui/src/components/TabbedFileManager/hooks/: useTabManager.ts
ui/src/hooks/: useFileSelection.ts  useI18n.ts  useWindowTitle.ts
ui/src/i18n/: README.md  exports.ts  index.ts
ui/src/i18n/components/: FloatingSettingsButton.tsx  SettingsPage.tsx
ui/src/i18n/contexts/: I18nContext.tsx
ui/src/i18n/hooks/: useI18n.ts  useWindowTitle.ts
ui/src/i18n/locales/en/: translation.json
ui/src/i18n/locales/zh/: translation.json
ui/src/locales/zh/: translation.json
ui/src/services/: api.ts  configService.ts
ui/src/types/: tauri.d.ts
ui/src/utils/: batchDownload.ts
