[package]
name = "multi-protocol-file-manager"
version = "0.1.0"
edition = "2021"
description = "A multi-protocol file manager built on OpenDAL"
authors = ["MultiProtocolFileManager <info@example.com>"]
license = "MIT"
default-run = "multi-protocol-file-manager"  # 添加这一行

# 定义二进制目标
[[bin]]
name = "multi-protocol-file-manager"
path = "src/main.rs"

[[bin]]
name = "main_cli"
path = "src/main_cli.rs"

[dependencies]
opendal = { version = "0.53.1", features = ["services-s3", "services-fs"] }
tokio = { version = "1.32", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
indicatif = "0.17"
prettytable-rs = "0.10"
uuid = { version = "1.5", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
hmac = "0.12"

# Tauri dependencies
tauri = { version = "2", features = [] }
tauri-plugin-notification = { version = "2.0.0", features = [ "windows7-compat" ] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
